tests/expectations/execution/optional_inputs_and_outputs_fail.out
Error while running execution tests:


Errors:
Error [ETYC0372164]: The input `x` has type `u64?`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:77:19
     |
  77 |     fn u64_in_out(x: u64?) -> u64? {
     |                   ^^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `u64?`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:77:31
     |
  77 |     fn u64_in_out(x: u64?) -> u64? {
     |                               ^^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `x` has type `u8?`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:84:18
     |
  84 |     fn u8_in_out(x: u8?) -> u8? {
     |                  ^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `u8?`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:84:29
     |
  84 |     fn u8_in_out(x: u8?) -> u8? {
     |                             ^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `x` has type `bool?`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:91:20
     |
  91 |     fn bool_in_out(x: bool?) -> bool? {
     |                    ^^^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `bool?`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:91:33
     |
  91 |     fn bool_in_out(x: bool?) -> bool? {
     |                                 ^^^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `f` has type `test.aleo/Foo?`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:98:24
     |
  98 |     fn struct_optional(f: Foo?) -> Foo? {
     |                        ^^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `test.aleo/Foo?`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:98:36
     |
  98 |     fn struct_optional(f: Foo?) -> Foo? {
     |                                    ^^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `arr` has type `[u8?; 2]?`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:109:23
     |
 109 |     fn array_optional(arr: [u8?; 2]?) -> [u8?; 2]? {
     |                       ^^^^^^^^^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `[u8?; 2]?`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:109:42
     |
 109 |     fn array_optional(arr: [u8?; 2]?) -> [u8?; 2]? {
     |                                          ^^^^^^^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
